# pulse

./: Cargo.toml  README.md  perf.txt
assets/: cornell.glb  cornell_no_light.glb  cornell_statue.glb  monkey_blue.glb  monkey_orange.glb  particle_test.glb  statue.glb
src/: diagnostics.rs  lib.rs  main.rs  profiling.rs  utilities.rs  utilities.wgsl
src/path_tracer/: mod.rs  node.rs  path_tracer.wgsl  pipeline.rs  resources.rs
src/path_tracer/pt_upscaling/: mod.rs  node.rs  pipeline.rs  pt_upscaling.wgsl
src/pulse/: gi.wgsl  mod.rs  node.rs  pipeline.rs
src/scene/: bindings.wgsl  blas.rs  bvh.rs  mod.rs  scene_bindings.wgsl  spatial_hashing.rs  tlas.rs  types.wgsl
src/upscaling/: mod.rs  node.rs  pipeline.rs  upscaling.wgsl
