[package]
name = "pulse"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 2

[dependencies]
bevy = { path = "./bevy", features = ["dynamic_linking"] }
# bevy = { path = "/home/ruben/dev/bevy/bevy" }
# wgpu = "0.17.1"
# bevy_camera_operator = { path = "../bevy_camera_operator" }
# bevy_egui = { path = "/home/ruben/dev/bevy/bevy_egui-0.24.0" }
bytemuck = "1.14.0"
